--- a/MP1/mp1.html
+++ b/MP1/mp1.html
@@ -42,18 +42,17 @@
 <script src="mp1.js"></script>
 
 <body onload="startup();">
-  <canvas id="myGLCanvas" width="700" height="700"></canvas>
+  <canvas id="myGLCanvas" width="800" height="800"></canvas>
 </body>
 
 <p>Animation settings:</p>
 <div>
-  <input type="range" id="speed" name="speed" min="0" max="100" value="5">
+  <input type="range" id="speed" name="speed" min="0" max="100" value="0">
   <label for="speed">Rotation Speed</label> <br><br>
-  <input type="checkbox" id="random" checked>Random<br><br>
-  <input type="checkbox" id="rotation">Rotation<br><br>
-  <input type="checkbox" id="scaling">Scaling<br><br>
-  <input type="checkbox" id="translation">Translation<br><br>
-  <input type="checkbox" id="buffer">Change Buffer<br><br>
+  <input type="range" id="scale" name="scale" min="0" max="100" value="100">
+  <label for="scale">Scale Value</label> <br><br>
+  <input type="range" id="translate" name="translate" min="0" max="100" value="0">
+  <label for="translate">Translate Degree</label> <br><br>
   <p>Select an animation:</p>
   <div>
     <input type="radio" id="I" name="animation" value="I" checked>
