finished all parts

--- a/MP1/mp1.html
+++ b/MP1/mp1.html
@@ -55,12 +55,12 @@
   <label for="translate">Translate Degree</label> <br><br>
   <p>Select an animation:</p>
   <div>
-    <input type="radio" id="I" name="animation" value="I" checked>
+    <input type="radio" id="I" name="animation" value="I">
     <label for="I">Illinois Logo</label>
   </div>
   <div>
-    <input type="radio" id="MyAnimation" name="animation" value="MyAnimation">
-    <label for="MyAnimation"> Your Animation Name Here</label>
+    <input type="radio" id="MyAnimation" name="animation" value="MyAnimation" checked>
+    <label for="MyAnimation"> Walk, cheer, take off </label>
   </div>
 </div>
 
