implement phong: it seems to have bugs

--- a/MP2/MP2.html
+++ b/MP2/MP2.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML> 
-<html lang="en"> 
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
 <title>MP2: Terrain</title>
-<meta charset="utf-8"> 
+<meta charset="utf-8">
 </head>
 
 <!-- If you add additional .js files, be sure to add them here. -->
@@ -29,44 +29,16 @@ uniform mat4 modelViewMatrix;
 uniform mat4 projectionMatrix;
 uniform mat3 normalMatrix;
 
-uniform vec3 kAmbient;
-uniform vec3 kDiffuse;
-uniform vec3 kSpecular;
-uniform float shininess;
-
-uniform vec3 lightPosition;
-uniform vec3 ambientLightColor;
-uniform vec3 diffuseLightColor;
-uniform vec3 specularLightColor;
-
-out vec4 vertexColor;
+// Send an interpolated normal vector from the vertex shader to the fragment shader.
+// Send an interpolated position value from vertex shader to the fragment shader.
+out vec3 vertexPositionView;
+out vec3 vertexNormalView;
 
 
 void main(void) {
     // Transform the vertex position and normal to view coordinates
     vec3 vertexPositionView =(modelViewMatrix * vec4(vertexPosition, 1.0)).xyz;
     vec3 vertexNormalView = normalize(normalMatrix * vertexNormal);
-
-    // The camera is at the origin in view coordinates
-    vec3 cameraPositionView = vec3(0.0, 0.0, 0.0);
-    
-    // Calculate the three other vectors we need: l, r, and v
-    vec3 lightVector = normalize(lightPosition - vertexPositionView);
-    vec3 reflectionVector = normalize(reflect(-lightVector, vertexNormalView));
-    vec3 viewVector = normalize(cameraPositionView - vertexPositionView);
-
-    // Calculate diffuse light weighting: (n dot l)
-    float diffuseWeight = max(dot(vertexNormalView, lightVector), 0.0);
-    
-    // Calculate the specular light weighting: (r dot v)^(shininess)
-    float rDotV = max(dot(reflectionVector, viewVector), 0.0);
-    float specularWeight = pow(rDotV, shininess);
-
-    // Sum up all three lighting components into the color for the vertex,
-    // and send it to the fragment shader.
-    vertexColor = vec4((  kAmbient * ambientLightColor
-                        + kDiffuse * diffuseLightColor * diffuseWeight
-                        + kSpecular * specularLightColor * specularWeight), 1.0);
 
     gl_Position =
         projectionMatrix * modelViewMatrix * vec4(vertexPosition, 1.0);
@@ -85,13 +57,45 @@ precision highp float;
 precision mediump float;
 #endif
 
-in vec4 vertexColor;
+// Receive an interpolated normal vector from the vertex shader
+// Receive an interpolated position value from vertex shader
+in vec3 vertexNormalView;
+in vec3 vertexPositionView;
+
+uniform vec3 kAmbient;
+uniform vec3 kDiffuse;
+uniform vec3 kSpecular;
+uniform float shininess;
+
+uniform vec3 lightPosition;
+uniform vec3 ambientLightColor;
+uniform vec3 diffuseLightColor;
+uniform vec3 specularLightColor;
+
 out vec4 fragmentColor;
 
 
 void main(void) {
-    // Interpolate the computed vertex color for each fragment.
-    fragmentColor = vertexColor;
+    // The camera is at the origin in view coordinates
+    vec3 cameraPositionView = vec3(0.0, 0.0, 0.0);
+
+    // Calculate the three other vectors we need: l, r, and v
+    vec3 lightVector = normalize(lightPosition - vertexPositionView);
+    vec3 reflectionVector = normalize(reflect(-lightVector, vertexNormalView));
+    vec3 viewVector = normalize(cameraPositionView - vertexPositionView);
+
+    // Calculate diffuse light weighting: (n dot l)
+    float diffuseWeight = max(dot(vertexNormalView, lightVector), 0.0);
+
+    // Calculate the specular light weighting: (r dot v)^(shininess)
+    float rDotV = max(dot(reflectionVector, viewVector), 0.0);
+    float specularWeight = pow(rDotV, shininess);
+
+    // Sum up all three lighting components into the color for the vertex,
+    // and send it to the fragment shader.
+    fragmentColor = vec4((  kAmbient * ambientLightColor
+                        + kDiffuse * diffuseLightColor * diffuseWeight
+                        + kSpecular * specularLightColor * specularWeight), 1.0);
 }
 </script>
 
