--- a/MP3/MP3.html
+++ b/MP3/MP3.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>MP2: Terrain</title>
+<title>MP3: Terrain-Flight</title>
 <meta charset="utf-8">
 </head>
 
 <!-- If you add additional .js files, be sure to add them here. -->
 <script src="gl-matrix-min.js"></script>
 <script src="Terrain.js"></script>
-<script src="MP2.js"></script>
+<script src="MP3.js"></script>
 
 <!-- MP2: Modify the shaders to implement Phong shading instead of Gourand! -->
 <script id="shader-vs" type="x-shader/x-vertex">#version 300 es
