--- a/MP3/MP3.html
+++ b/MP3/MP3.html
@@ -3,12 +3,14 @@
 <head>
 <title>MP3: Terrain-Flight</title>
 <meta charset="utf-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 
 <!-- If you add additional .js files, be sure to add them here. -->
 <script src="gl-matrix-min.js"></script>
 <script src="Terrain.js"></script>
 <script src="MP3.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
 <!-- MP2: Modify the shaders to implement Phong shading instead of Gourand! -->
 <script id="shader-vs" type="x-shader/x-vertex">#version 300 es
@@ -123,19 +125,52 @@ void main(void) {
 </script>
 
 
-<body onload="startup();">
-    <canvas id="glCanvas" width="1200" height="600"></canvas>
+<body onload="startup();" class="container">
+    <canvas id="glCanvas" width="1000" height="600" style="margin: auto; padding: 0; display: block"></canvas>
 
     <form id="input_form">
-        <fieldset>
-            <legend>Rendering Options</legend>
-            <div>
+        <fieldset style="margin: 50px auto 20px auto; text-align: center;">
+            <h2>Rendering Options</h2>
+            <div class="col-sm" style="margin: 20px auto;">
                 <input type="radio" name="primitive" id="wireframe" value="wireframe"> Wireframe
                 <input type="radio" name="primitive" id="polygon" value="polygon" checked> Polygon
                 <input type="radio" name="primitive" id="wirepoly" value="wirepoly" > Polygon with Edges
             </div>
         </fieldset>
     </form>
+
+    <table class="table table-striped caption-top">
+        <caption>Control Keys:</caption>
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Controllers</th>
+            <th scope="col">Features</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Left (right) Arrow</td>
+            <td>Make the plane roll to its left (right)</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Up (down) arrow</td>
+            <td>Cause the airplane to pitch up (down)</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>+ (-)</td>
+            <td>Increase (decrease) the airplane’s speed</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>ESC</td>
+            <td>Reset the current view to the initial viewpoint and direction</td>
+          </tr>
+        </tbody>
+      </table>
 </body>
 
 </html>
