finish all parts before fog

--- a/MP3/MP3.html
+++ b/MP3/MP3.html
@@ -160,12 +160,17 @@ void main(void) {
             <td>Cause the airplane to pitch up (down)</td>
           </tr>
           <tr>
-            <th scope="row">3</th>
+              <th scope="row">3</th>
+              <td>A(D)</td>
+              <td>Make the plane Yaw to left (right)</td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
             <td>+ (-)</td>
             <td>Increase (decrease) the airplane’s speed</td>
           </tr>
           <tr>
-            <th scope="row">3</th>
+            <th scope="row">5</th>
             <td>ESC</td>
             <td>Reset the current view to the initial viewpoint and direction</td>
           </tr>
