--- a/MP5/MP5.html
+++ b/MP5/MP5.html
@@ -83,8 +83,8 @@ void main(void) {
 
 
 <body onload="startup();" class="container">
-    <canvas id="glCanvas" width="800" height="600" style="margin: auto; padding: 0; display: block"></canvas>
-    <h3 style="margin: 50px auto 20px auto; text-align: center;">CS418-MP5</h3>
+    <canvas id="glCanvas" width="600" height=600"></canvas>
+    <h3 style="margin: 50px auto 20px auto;">CS418-MP5</h3>
     <table class="table table-striped">
         <p class="lead">
             🔑 Control Keys
